--- a/src/components/Calculator.css
+++ b/src/components/Calculator.css
@@ -1,3 +1,14 @@
+.calc {
+  width: 90vw;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.calc h2 {
+  font-size: 1.8rem;
+}
+
 .calculator {
   display: inline-grid;
   grid-template-columns: repeat(4, 60px);
@@ -29,4 +40,5 @@
 
 .btn-gray {
   background-color: #e0e0e0;
+  /* stylelint-disable-next-line no-missing-end-of-source-newline */
 }
